<resources>
    <string name="app_name">Draw app</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="detect">Detect</string>
    <string name="paint">Paint</string>

    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

    <string name="preview_scaled">Ảnh scale </string>
    <string name="not_detected">Không thể detect</string>
    <string name="found_digits">%1$s</string>
</resources>