<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/new_pic" />

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/brush" />

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/detect"
            android:src="@drawable/detect" />
    </LinearLayout>
    <com.example.test1.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="3dp"
        android:layout_weight="1"
        android:background="#000000" />

<!--    <com.example.test1.DrawingView-->
<!--        android:id="@+id/drawing"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="300dp"-->
<!--        android:layout_marginLeft="5dp"-->
<!--        android:layout_marginTop="3dp"-->
<!--        android:layout_marginRight="5dp"-->
<!--        android:layout_marginBottom="3dp"-->
<!--        android:layout_weight="1"-->
<!--        android:background="#FFFFFF" />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="19dp"
        android:orientation="vertical"
        android:paddingVertical="15dp">

        <TextView
            android:id="@+id/detect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Số dự đoán =  ? \n Độ chính xác = ?"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/inference_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/scaled_preview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/preview_scaled"
            android:textAppearance="?android:attr/textAppearanceMedium"  />

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</LinearLayout>